--- a/src/pages/homePage/home.module.css
+++ b/src/pages/homePage/home.module.css
@@ -1,5 +1,5 @@
 .list_movie{
-    /* margin-top: 107px; */
+    margin-top: 107px;
     width: 1240px;
     margin-left: auto;
     margin-right: auto;
@@ -15,4 +15,7 @@
 }
 .list_item{
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.active {
+    color:  green;
 }
