--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #1A1A1D;
+  color: whitesmoke;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-.active{
-  color: rgb(204, 9, 107);
 }
 .container{
   margin-left: auto;
