--- a/src/pages/movieDetails/movieStyles.module.css
+++ b/src/pages/movieDetails/movieStyles.module.css
@@ -10,7 +10,7 @@
 .movie_title{
     font-size: 38px;
     font-weight: 700;
-    color: black;
+    color: whitesmoke;
 }
 .title{
     font-size: 24px;
@@ -54,7 +54,7 @@
     margin-right: auto;
  }
  .cast_rev{
-    color: black;
+    color: whitesmoke;
     text-decoration: none;
     font-size: 30px;
     font-weight: 700;
@@ -74,4 +74,31 @@
     margin-bottom: 0;
     font-size: 24px;
     font-weight: 500;
+}
+.nuv_cast_rev{
+    display: flex;
+    justify-content: space-between;
+}
+.box_null{
+    width: 100px;
+    height: 150px;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.button_home {
+    background-color: #4E4E50;
+    color: #C3073F;
+    border: none;
+    padding: 10px;
+    border-radius: 4px;
+    font-size: 15px;
+    transition: transform 150ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button_home:hover {
+    cursor: pointer;
+    transform: scale(0.9);
 }
