--- a/src/pages/movieDetails/movieStyles.module.css
+++ b/src/pages/movieDetails/movieStyles.module.css
@@ -102,3 +102,8 @@
     cursor: pointer;
     transform: scale(0.9);
 }
+.poster_box{
+    width: 100%;
+    height: 500px;
+    background-color: rgba(0, 0, 0, 0.4);
+}
